update collection list and collection page

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,7 +11,7 @@
     "color_accent": "#6fbbde",
     "color_borders_and_lines": "#6fbbde",
     "color_button_primary": "#6fbbde",
-    "color_button_secondary": "#6fbbde",
+    "color_button_secondary": "#ffffff",
     "type_heading_font": "oswald_n6",
     "type_base_font": "neuzeit_office_soft_rounded_n4",
     "text_size": 90,
